# rust_cli_app

./: Cargo.toml  README.md
src/: main.rs  types.rs
src/types/: cli.rs
tests/: cli.rs
