[package]
name = "cli_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
colored = "2"
regex = "1"

[dev-dependencies]
assert_cmd = "2.0.8"
assert_fs = "1.0.10"
predicates = "2.1.5"
